remove test project

--- a/Integration/Integration.xcodeproj/xcshareddata/xcschemes/watchOSSwiftIntegration (Notification).xcscheme
+++ b/Integration/Integration.xcodeproj/xcshareddata/xcschemes/watchOSSwiftIntegration (Notification).xcscheme
@@ -65,10 +65,8 @@
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "8"
       notificationPayloadFile = "watchOSSwiftIntegration Extension/PushNotificationPayload.apns">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/iOSSwiftIntegration">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0A87D5562177C25700BD0C4C"
@@ -76,7 +74,7 @@
             BlueprintName = "watchOSSwiftIntegration"
             ReferencedContainer = "container:Integration.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -86,10 +84,8 @@
       debugDocumentVersioning = "YES"
       launchAutomaticallySubstyle = "8"
       notificationPayloadFile = "watchOSSwiftIntegration Extension/PushNotificationPayload.apns">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/iOSSwiftIntegration">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0A87D5562177C25700BD0C4C"
@@ -97,16 +93,7 @@
             BlueprintName = "watchOSSwiftIntegration"
             ReferencedContainer = "container:Integration.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0A87D5562177C25700BD0C4C"
-            BuildableName = "watchOSSwiftIntegration.app"
-            BlueprintName = "watchOSSwiftIntegration"
-            ReferencedContainer = "container:Integration.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
