--- a/Integration/Integration.xcodeproj/xcshareddata/xcschemes/watchOSSwiftIntegration.xcscheme
+++ b/Integration/Integration.xcodeproj/xcshareddata/xcschemes/watchOSSwiftIntegration.xcscheme
@@ -64,10 +64,8 @@
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES"
       notificationPayloadFile = "watchOSSwiftIntegration Extension/PushNotificationPayload.apns">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/iOSSwiftIntegration">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0A87D5562177C25700BD0C4C"
@@ -75,7 +73,7 @@
             BlueprintName = "watchOSSwiftIntegration"
             ReferencedContainer = "container:Integration.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -84,10 +82,8 @@
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES"
       notificationPayloadFile = "watchOSSwiftIntegration Extension/PushNotificationPayload.apns">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/iOSSwiftIntegration">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "0A87D5562177C25700BD0C4C"
@@ -95,16 +91,7 @@
             BlueprintName = "watchOSSwiftIntegration"
             ReferencedContainer = "container:Integration.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "0A87D5562177C25700BD0C4C"
-            BuildableName = "watchOSSwiftIntegration.app"
-            BlueprintName = "watchOSSwiftIntegration"
-            ReferencedContainer = "container:Integration.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
